WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Review Status Audit</relationshipLabel>
    <relationshipName>Review_Status_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>