WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Account_Status_Before_Review__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Before_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Status - Before Review</label>
    <length>50</length>
    <type>Text</type>
</CustomField>