WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Account_Sub_Status_After_Review__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Status_After_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Sub-Status - After Review</label>
    <length>50</length>
    <type>Text</type>
</CustomField>