WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Billing_Plan_After_Review__c.field-meta.xml
<CustomField>
    <fullName>Billing_Plan_After_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Plan After Review</label>
    <length>100</length>
    <type>Text</type>
</CustomField>