WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Credit_Expiration_Date_After_Review__c.field-meta.xml
<CustomField>
    <fullName>Credit_Expiration_Date_After_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Expiration Date - After Review</label>
    <length>18</length>
    <type>Text</type>
</CustomField>