WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Credit_Utilisation__c.field-meta.xml
<CustomField>
    <fullName>Credit_Utilisation__c</fullName>
    <label>Credit Utilisation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>