WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Current_Risk_Grade_After_Review__c.field-meta.xml
<CustomField>
    <fullName>Current_Risk_Grade_After_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Risk Grade - After Review</label>
    <length>18</length>
    <type>Text</type>
</CustomField>