WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(DATEVALUE( Review_End_Date_Time__c) - DATEVALUE(Review_Start_Date_Time__c) &lt; 0, 0, DATEVALUE( Review_End_Date_Time__c) - DATEVALUE(Review_Start_Date_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>