WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Duration_Ex_holidays__c.field-meta.xml
<CustomField>
    <fullName>Duration_Ex_holidays__c</fullName>
    <label>Duration Ex holidays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>