WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Insurance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Expiry Date</label>
    <type>Date</type>
</CustomField>