WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Insurance_Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Policy Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>