WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Insured_Limit_After_Review__c.field-meta.xml
<CustomField>
    <fullName>Insured_Limit_After_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insured Limit - After Review</label>
    <length>18</length>
    <type>Text</type>
</CustomField>