WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/IsLatest__c.field-meta.xml
<CustomField>
    <fullName>IsLatest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLatest</label>
    <type>Checkbox</type>
</CustomField>