WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Payment_Term_Before_Review__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Before_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Term - Before Review</label>
    <length>18</length>
    <type>Text</type>
</CustomField>