WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Previous_Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>Previous_Risk_Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Risk Grade</label>
    <length>18</length>
    <type>Text</type>
</CustomField>