WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Review_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Review_End_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review End Date/Time</label>
    <type>DateTime</type>
</CustomField>