WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>