WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>