WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Security_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Security_Date_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Security Date Received</label>
    <length>18</length>
    <type>Text</type>
</CustomField>