WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Security_Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Security_Date_Requested__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Security Date Requested</label>
    <type>Date</type>
</CustomField>