WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Security_Type_Before_Review__c.field-meta.xml
<CustomField>
    <fullName>Security_Type_Before_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Security Type - Before Review</label>
    <length>18</length>
    <type>Text</type>
</CustomField>