WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Review_Status_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>