WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>