WexGit/Wex_DX/force-app/main/default/objects/Review_Status_Audit__c/fields/Wes_Review_Id__c.field-meta.xml
<CustomField>
    <fullName>Wes_Review_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wes Review Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>